objects/ChargentOrders__Account_Updater_Log__c.object
<CustomObject>
    <fields>
        <fullName>ChargentOrders__Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__ChargentOrder__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order</label>
        <referenceTo>ChargentOrders__ChargentOrder__c</referenceTo>
        <relationshipLabel>Account Updater Logs</relationshipLabel>
        <relationshipName>Account_Updater_Logs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Log_Message__c</fullName>
        <label>Log Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Order_With_Error__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order With Error</label>
        <referenceTo>ChargentOrders__ChargentOrder__c</referenceTo>
        <relationshipLabel>Account Updater Logs (Order With Error)</relationshipLabel>
        <relationshipName>Order_With_Error</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Updater Log</label>
    <nameField>
        <displayFormat>AUL-{0000}</displayFormat>
        <label>Account Updater Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Updater Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>